@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FTN NetMail/EchoMail
  *
- * $Id: runinc.c,v 5.1 2004/12/10 19:10:02 anray Exp $
+ * $Id: runinc.c,v 5.2 2006/10/13 11:55:52 anray Exp $
  *
  * Processing inbound packets
  *
@@ -62,7 +62,7 @@
 #endif
 
 #define PROGRAM		"runinc"
-#define VERSION		"$Revision: 5.1 $"
+#define VERSION		"$Revision: 5.2 $"
 #define CONFIG		DEFAULT_CONFIG_MAIN
 
 void* subs(char *str,char *macro,char *expand);
@@ -526,7 +526,7 @@ int toss_init(void)
 	    if(mkdir(buffer, 0750) == -1)
 	    {
 		fglog("$ERROR: can't create directory %s", buffer);
-		return;
+		return ERROR;
 	    }
 	    else
 	    {
@@ -536,7 +536,7 @@ int toss_init(void)
 	}
     }
 
-    return;
+    return 0;
 }
 
 /*
