@@ -1,3 +1,15 @@
+2006-10-13  Andrey Slusar  <anrays@gmail.com>
+
+	* src/common/lock.c: Fix stale locks detecting(patch
+	from Zhenya Kaluta, tested by Evgeniy Kozhuhovskiy).
+	* src/common/log.c: Comment breaking code(modified
+	patch from Zhenya Kaluta, tested by Evgeniy Kozhuhovskiy).
+	* src/toss/runinc.c (toss_init): Fix return values.
+	* src/include/packet.h (struct): Fix types for name_to,
+	name_from, subject.
+	* src/common/areas.c (areas_init_xlate): Fix types
+	for x_a and x_g.
+
 2006-05-09  Andrey Slusar  <anrays@gmail.com>
 
 	* configure.in: Update my email address, correct
